# service-orchestration-tech-test

./: .gitignore  Makefile  README.md  service.cfg
infra/ecr-repository/: ecr.tf  outputs.tf
infra/kustomization/url-shortener/: configMap.yaml  deployment.yaml  kustomization.yaml  service.yaml
infra/redis/: kustomization.yaml  namespace.yaml
infra/url-shortener/: kustomization.yaml  namespace.yaml
scripts/: smoketest.sh
service/: Dockerfile  README.md  pyproject.toml  service.cfg
service/src/pw/service/: server.py
